Fixed color contrast issues with links and prev/next diff buttons.

--- a/packages/app/client/src/ui/shell/explorer/botNotOpenExplorer/botNotOpenExplorer.scss
+++ b/packages/app/client/src/ui/shell/explorer/botNotOpenExplorer/botNotOpenExplorer.scss
@@ -43,7 +43,7 @@
 }
 
 .explorer-link {
-  color: var(--dialog-link-color);
+  color: var(--explorer-link-color);
 }
 
 .explorer-empty-state {
